--- a/src/components/Timer/Timer.module.scss
+++ b/src/components/Timer/Timer.module.scss
@@ -15,13 +15,11 @@
   top: 0;
   left: 0;
   right: 0;
-  height: 8%;
   padding-top: 0.75rem;
-  display: flex;
-  align-items: flex-start;
-  justify-content: center;
+  text-align: center;
 
   span {
+    display: inline-block;
     padding: 0.375rem 0.875rem;
     font-size: 0.8125rem;
     font-weight: 500;
