--- a/src/components/Timer/Timer.module.scss
+++ b/src/components/Timer/Timer.module.scss
@@ -20,10 +20,11 @@
 
   span {
     display: inline-block;
-    padding: 0.375rem 0.875rem;
+    padding: 0.5rem 0.875rem;
     font-size: 0.8125rem;
     font-weight: 500;
     letter-spacing: 0.03em;
+    line-height: 1;
     color: var(--text-color);
     background-color: color-mix(in srgb, var(--text-color) 12%, transparent);
     border-radius: 100px;
@@ -34,4 +35,30 @@
   position: relative;
   top: 10%;
   height: 90%;
+}
+
+.left,
+.right {
+  display: contents;
+}
+
+@media (orientation: landscape) {
+  .inside {
+    display: flex;
+    flex-direction: row;
+    top: calc(2.5625rem + 0.7rem);
+    height: calc(100% - 2.5625rem + 0.7rem);
+  }
+
+  .left,
+  .right {
+    display: block;
+    width: 50%;
+    height: 80cqh;
+  }
+
+  .right {
+    display: flex;
+    flex-direction: column;
+  }
 }
