--- a/src/components/Timer/components/Meter/Meter.module.scss
+++ b/src/components/Timer/components/Meter/Meter.module.scss
@@ -10,6 +10,7 @@
   contain: strict;
 
   svg {
+    margin: 0 auto;
     height: 100%;
     backface-visibility: hidden;
     transform: translate3d(0, 0, 0);
@@ -39,5 +40,16 @@
 
   &.rest {
     stroke: var(--chart-rest);
+  }
+}
+
+@media (orientation: landscape) {
+  .root,
+  .root svg {
+    height: 100%;
+  }
+
+  .time {
+    font-size: 20cqh;
   }
 }
