--- a/src/components/Timer/Timer.module.scss
+++ b/src/components/Timer/Timer.module.scss
@@ -17,6 +17,7 @@
   right: 0;
   padding-top: 0.75rem;
   text-align: center;
+  z-index: 2;
 
   span {
     display: inline-block;
@@ -46,7 +47,6 @@
   .inside {
     display: flex;
     flex-direction: row;
-    top: calc(2.5625rem + 0.7rem);
     height: calc(100% - 2.5625rem + 0.7rem);
   }
 
